--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -25,11 +25,19 @@
         
       </div>
     <% end %>
+    
+    <% if session[:login] == 1 %> 
+        <%= link_to 'Edit', edit_item_path(item), :class =>"button", :role=>"button" %>
+        <%= link_to 'Destroy', item, method: :delete, data: { confirm: 'Are you sure?' }, :class =>"button", :role=>"button" %>
+        
+        <% end %>
+
       
 </div>
 
 <br>
-<%= link_to 'New Item',  new_item_path, :class => "button", :role => "button" %>
+<footer class = "foot">
 <% if session[:login] == 1 %>    
 <%= link_to 'New Item', new_item_path, :class =>"button", :role=>"button" %>
+</footer>
 <% end %>
