--- a/app/views/cart/index.html.erb
+++ b/app/views/cart/index.html.erb
@@ -1,5 +1,6 @@
-<h1>Cart#index</h1>
-<p>Find me in app/views/cart/index.html.erb</p>
+<% if @cart.empty? %>
+<p>You have not added any items yet</p>
+<% end %>
 
 <p id="notice"><%= notice %></p>
 <div id="itemsContainer">
@@ -10,7 +11,7 @@
          <tr>
             <td>
                 <div class="image">
-                    <%= link_to (image_tag item.image_url, :style =>"height:40px"), item %>
+                  <%= link_to (image_tag item.image_url, :style =>"height:40px"), item %>
                 </div>
 
                 </td>
@@ -20,13 +21,14 @@
             <td class="price"><%= number_to_currency(item.price, :unit =>"€") %></td>
             <td class="quantity"><%= quantity %></td>
             <td><a href="/cart/remove/<%= item.id %>">Remove From Cart</a></td>
+             <td><a href="/cart/decrease/<%= item.id %>">Decrease</a></td>
             <td 
 
         </tr>
                 <% total += quantity * item.price %>
         <% end %>
         <tr>
-            Grang Total: <%= number_to_currency(total, :unit => "€") %>
+            Grand Total: <%= number_to_currency(total, :unit => "€") %>
          </tr>
          
         <p>
@@ -36,8 +38,8 @@
         <%end%>
 
             <a href="/items" class="button">Continue Shopping</a>
-            <a href="/clearcart" class="button">Empty Cart</a>
             <a href="/cart/clear" class="button">Clear Cart</a>
+           
             
         </p>
 
