--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,21 @@
         <li><%= link_to "Log Out",   logout_path %></li>
         <li><%= link_to "View Cart", "/cart" %></li>
 
+        <% if user_signed_in? %>
+                 <li><a href="#">Hi <%= current_user.email %></a></li>
+                 <li><%= link_to 'Sign out', destroy_user_session_path, :method => :delete %></li>
+        <% else %>
+                 <li><%= link_to 'Register', new_user_registration_path %></li> 
+                 <li><%= link_to 'Sign in', new_user_session_path %></li>
+        <% end %>
+          
+        <% if session[:login] == 1 %> 
+        <li><%= link_to "Admin Logout", logout_path %></li>
+        <% else %>
+        
+        <li><%= link_to "Admin Login", login_path %></li>
+        <% end %>
+
         
       </ul>
 </header>
@@ -29,8 +44,8 @@
   <div class="container">
     <%= yield %>
   </div>
-
-  </body>s
+  
+</body>
   
 <footer class="foot">
 
