--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -67,7 +67,7 @@ li a {
 
 .foot {
     min-height: 80px;
-    background-color: #b3e0ff;
+    background-color: red;
     width: 100%;
     margin-top: 10px;
     overflow: auto;
