updated to tutorial 8

--- a/app/views/cart/index.html.erb
+++ b/app/views/cart/index.html.erb
@@ -35,7 +35,8 @@
         <% if @cart.empty? %>
             <h1> Your cart is empty</h1>
         <%end%>
-
+        
+        <a href="/checkout" class="button">Checkout</a>
             <a href="/items" class="button">Continue Shopping</a>
             <a href="/cart/clear" class="button">Clear Cart</a>
            
