--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -10,8 +10,19 @@
     
     
 <h1>Home</h1>
-<p>Welcome to your first home page!</p>
+<p>Welcome to your first home page</p>
+    
+<%=render 'layouts/categories'%>
+ 
+<h1>Categories</h1>
 <br>
-<br>
-<p>Text here for the web site</p>
+
+  <% @categories.each do |category| %>
+       <div class="itemhols">
+           
+           <p><%= category.description %></p>
+         </div>
+    
+    <% end %>
+
 </div>
