--- a/app/views/static_pages/category.html.erb
+++ b/app/views/static_pages/category.html.erb
@@ -21,8 +21,13 @@
 
         <% if session[:login] == 1 %> 
         <%= link_to 'Edit', edit_item_path(item), :class =>"button", :role=>"button" %>
-        <%= link_to 'Destroy', item, method: :delete, data: { confirm: 'Are you sure?' }, :class =>"button",           :role=>"button" %>
+        <%= link_to 'Destroy', item, method: :delete, data: { confirm: 'Are you sure?' }, :class =>"button",:role=>"button" %>
         
+        <% end %>
+        
+        <% if @items.length == 0  %>
+        <br />
+        <h2>There are currently no products in this category</h2>
         <% end %>
         </p>
      </div>
