--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= yield(:title) %> | Charity Store </title>
+    <title><%= yield(:title) %> | St. Joseph’s Assoc. IDS F&F </title>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -11,7 +11,7 @@
   <body>
 
  <header class="headSec">
-    <h1>Charity Store</h1>
+    <h1>St. Joseph’s Assoc. IDS F&F</h1>
       
       <ul class="tabs">
         <li><%= link_to "Home",  "/" %></li>
