--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -20,25 +20,33 @@
         
          <%= link_to 'Show',  item, :class => "button", :role => "button" %>
          <a href="/cart/<%= item.id %>" class="button">Add To Cart</a>
-      
+         
+         <% if session[:login] == 1 %> 
+        <%= link_to 'Edit', edit_item_path(item), :class =>"button", :role=>"button" %>
+        <%= link_to 'Destroy', item, method: :delete, data: { confirm: 'Are you sure?' }, :class =>"button", :role=>"button" %>
+        
+        <% end %>
+        
+<% if session[:login] == 1 %>    
+       
+<%= link_to 'New Item', new_item_path, :class =>"button", :role=>"button" %>
+<%= link_to 'Edit', edit_item_path(item), :class =>"button", :role=>"button" %>
+<%= link_to 'Destroy', item, method: :delete, data: { confirm: 'Are you sure?' }, :class =>"button", :role=>"button" %>
+    
+<% end %>
+
+
        </p>
+       
+
         
       </div>
     <% end %>
     
 
+    
+
 </div>
 
 <br>
-<footer class = "foot">
-<% if user_signed_in? %>    
 
-<%= link_to 'Edit',  edit_item_path(item), :class => "button", :role => "button" %>
-<%= link_to 'Destroy',  item, method: :delete, data: { confirm: 'Are you sure?' }, :class => "button", :role => "button" %>
-         
-<%= link_to 'New Item', new_item_path, :class =>"button", :role=>"button" %>
-<%= link_to 'Edit', edit_item_path(item), :class =>"button", :role=>"button" %>
-<%= link_to 'Destroy', item, method: :delete, data: { confirm: 'Are you sure?' }, :class =>"button", :role=>"button" %>
-        
-</footer>
-<% end %>
