--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,15 +1,11 @@
 <% provide(:title, "Home") %>
 
 
-
-<h1>Charity Website</h1>
-
-
 <div class="mainCont">
-<%= image_tag("Inert image here", alt: "Welcome Logo", :class => "welcomeIm") %>    
+<%= image_tag("Building.jpg", alt: "Welcome Logo", :class => "welcomeIm") %>    
     
     
-<h1>Home</h1>
+<h1>Charity Fund Raising App for SJAIDSF&F</h1>
 <p>Welcome to your first home page!</p>
 <br>
 <br>
