--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -55,7 +55,7 @@
     <!-- it is called using -->
     <%=render 'layouts/search'%>
       
-    <!-- this is the search coder in the partial -->
+    <!-- this is the search code in the partial -->
       
     <%= form_tag("/search", :method => "post") do %>
     <%= label_tag(:q, "Search for:") %>
