--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -33,7 +33,7 @@
 <%= link_to 'New Item', new_item_path, :class =>"button", :role=>"button" %>
 <%= link_to 'Edit', edit_item_path(item), :class =>"button", :role=>"button" %>
 <%= link_to 'Destroy', item, method: :delete, data: { confirm: 'Are you sure?' }, :class =>"button", :role=>"button" %>
-    
+<%= link_to 'New Category', new_category_path, :class =>"button", :role=>"button"  %>
 <% end %>
 
 
