--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,14 +18,15 @@
         <li><%= link_to "About", about_path %></li>
         <li><%= link_to "Help", help_path %></li>
         <li><%= link_to "Products", products_path %></li>
-        <li><%= link_to "Log In",   login_path %></li>
-        <li><%= link_to "Log Out",   logout_path %></li>
+        <!--- <li><%= link_to "Log In",   login_path %></li> --->
+        <!--- <li><%= link_to "Log Out",   logout_path %></li> --->
         <li><%= link_to "View Cart", "/cart" %></li>
         
 
         <% if user_signed_in? %>
                  <li><a href="#">Hi <%= current_user.email %></a></li>
                  <li><%= link_to 'Sign out', destroy_user_session_path, :method => :delete %></li>
+                 <li><%= link_to 'Edit Profile', edit_user_registration_path %></li>
         <% else %>
                  <li><%= link_to 'Register', new_user_registration_path %></li> 
                  <li><%= link_to 'Sign in', new_user_session_path %></li>
@@ -37,15 +38,16 @@
         <li><%= link_to "Admin Login", login_path %></li>
         <% end %>
         
+        <!---
         <% if user_signed_in? %>
                   
-                 <li><%= link_to 'Edit Profile', edit_user_registration_path %></li>
+                 
                  <li><%= link_to 'Sign out', destroy_user_session_path, :method => :delete %></li>
           <% else %>
                  <li><%= link_to 'Register', new_user_registration_path %></li> 
                  <li><%= link_to 'Sign in', new_user_session_path %></li>
           <% end %>
-
+        --->
         
         
       </ul>
