--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -21,16 +21,10 @@
          <%= link_to 'Show',  item, :class => "button", :role => "button" %>
          <a href="/cart/<%= item.id %>" class="button">Add To Cart</a>
 
-         
-         <% if session[:login] == 1 %> 
-        <%= link_to 'Edit', edit_item_path(item), :class =>"button", :role=>"button" %>
-        <%= link_to 'Destroy', item, method: :delete, data: { confirm: 'Are you sure?' }, :class =>"button", :role=>"button" %>
-        
-        <% end %>
+<br>
         
 <% if session[:login] == 1 %>    
        
-<%= link_to 'New Item', new_item_path, :class =>"button", :role=>"button" %>
 <%= link_to 'Edit', edit_item_path(item), :class =>"button", :role=>"button" %>
 <%= link_to 'Destroy', item, method: :delete, data: { confirm: 'Are you sure?' }, :class =>"button", :role=>"button" %>
 <%= link_to 'New Category', new_category_path, :class =>"button", :role=>"button"  %>
@@ -38,11 +32,16 @@
 
 
        </p>
-       
         
       </div>
     <% end %>
+    <div id="buttonNewItem">
+   <% if session[:login] == 1 %>    
+       
+      <%= link_to 'New Item', new_item_path, :class =>"button", :role=>"button" %>
+
+   <% end %>
+  </div>
+
 
 </div>
-
-<br>
