--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -129,7 +129,7 @@ li a {
     
 }
 .button {
-    background-color: #5085A5;
+    background-color: #8FC1E3;
     border: none;
     color: white;
     padding: 15px 32px;
@@ -142,7 +142,7 @@ li a {
 }
 
 .buttonNewItem {
-    background-color: #5085A5;
+    background-color: #8FC1E3;
     border: none;
     color: white;
     padding: 15px 32px;
