--- a/app/views/cart/createOrder.html.erb
+++ b/app/views/cart/createOrder.html.erb
@@ -1,3 +1,4 @@
+
 <h2>Thank You</h2>
 <p>You have just placed an order</p>
 <div id="itemsContainer">
@@ -14,7 +15,8 @@ You have just placed an order <%=@orderReg.id %></h1>
         <% end %>
     </tr>
 </table>    
-    
+
+<div>    
     
 <table id="customers">
      <% @total = 0 %>
