small test change

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,10 +1,13 @@
 <% provide(:title, "Home") %>
 
+
 <div class="mainCont">
 <%= image_tag("Building.jpg", alt: "Welcome Logo", :class => "welcomeIm") %>    
+    
+    
 
 <h1>Charity Fund Raising App for SJAIDSF&F</h1>
-<p>Please visit our products page for the most up to date items to donate </p>
+<p>Welcome to your first home page! blah blah blha!</p>
 <br>
 
 <br>
@@ -15,12 +18,11 @@
 <p>
     
   <% @categories.each do |category| %>
-  
-    <div class="itemhols">
+       <div class="itemhols">
            
         <p><%= category.description %></p>
            
-    </div>
+         </div>
          
 </p>
 
