--- a/app/views/cart/createOrder.html.erb
+++ b/app/views/cart/createOrder.html.erb
@@ -1,22 +1,14 @@
-
-<h2>Thank You</h2>
-<p>You have just placed an order</p>
 <div id="itemsContainer">
     <h1>Thank You<br>
-You have just placed an order <%=@orderReg.id %></h1>
+You have just placed an order <%=@order.id%></h1>
 </div>
-
 <table id="customers">
     <tr>
-         
-        <% @orders.id %>  
-        
-       <td>Order reference for the order you just placed <%= order.id %></td>
-        <% end %>
+      </tbody>
+        <% @orders.id%>
     </tr>
 </table>    
-
-<div>    
+    
     
 <table id="customers">
      <% @total = 0 %>
@@ -26,12 +18,11 @@ You have just placed an order <%=@orderReg.id %></h1>
        
         <td><%= item.title %></td>
         <td><%= item.quantity %></td>
-       <td><%= number_to_currency(item.price, :unit => "€")%></td> 
+       <td><%=number_to_currency(item.price, :unit => "€")%></td> 
        <td><%= number_to_currency(item.quantity * item.price, :unit => "€") %></td>
        </tr>
        
        <% timx = (item.quantity * item.price)%>  
-     
       <% @total += timx %>
       
       </tr>
@@ -42,9 +33,7 @@ You have just placed an order <%=@orderReg.id %></h1>
         
        <td>Order Total: &euro; <%= @total %></td>
        
-       <td>Order Total: &euro; <%= @total %></td>
-       
-        <% shipping = 30 %>
+<% shipping = 30 %>
       <% @overall = shipping + @total%>
       <tr>
           <td>Shipping &euro;30</td>
@@ -53,4 +42,18 @@ You have just placed an order <%=@orderReg.id %></h1>
 <tr>
           <td><h2>  <a href="/paid/<%= @order.id %>" class="button">Pay Now</a></h2></td>
       </tr>
+
+       
+      </tr>
 </table>
+
+<form action="https://www.sandbox.paypal.com/cgi-bin/webscr" method="post">
+<input type="hidden" name="cmd" value="_xclick">
+<input type="hidden" name="business" value="sb-ms4343n1258190@business.example.com">
+<input type="hidden" name="item_name" value="Golf Store Order Number <%= @orderNum %>">
+<input type="hidden" name="currency_code" value="EUR">
+<input type="hidden" name="amount" value="<%= @overall %>">
+<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynow_LG.gif" name="submit" alt="Make payments with PayPal - it's fast, free and secure!">
+<input type="hidden" name="return" value="https://3bf53c68a1c243608bc2a558c5090d8c.vfs.cloud9.us-east-1.amazonaws.com/" >
+</form>
+
