--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,79 +1,34 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Title:</strong>
-  <%= @item.title %>
-</p>
 
-<p>
-  <strong>Description:</strong>
-  <%= @item.description %>
-</p>
 
-<p>
-  <strong>Price:</strong>
-  <%= @item.price %>
-</p>
+ <div id="itemsContainer">
+   <h1><%= @item.title %></h1>
+   <%= image_tag @item.image_url, :class => 'welcomIm'  %>
+       <h2><%= @item.description %></h1>
+   
+    <div class="itemhols">
+       <p>Price <%= number_to_currency(@item.price, :unit => "€") %>
+       <br>
+        Category: <%= @item.category %>
+        <br>
+        Brand: <%= @item.brand %></p>
+       
+       <p>
+         <%= link_to 'Back',  items_path, :class => "button", :role => "button" %>
+         <%= link_to 'Edit',  edit_item_path(@item), :class => "button", :role => "button" %>
+         
+       </p>
+        
+      </div>
+   
+   
+   </div>
 
-<p>
-  <strong>Image url:</strong>
-  <%= @item.image_url %>
-</p>
 
-<p>
-  <strong>Category:</strong>
-  <%= @item.category %>
-</p>
-
-<p>
-  <strong>Brand:</strong>
-  <%= @item.brand %>
-</p>
 
 <%= link_to 'Edit', edit_item_path(@item) %> |
 <%= link_to 'Back', items_path %>
-<li><%= link_to "View Orders", orders_path  %></li>
 
-<div id="itemsContainer">
 
-<p id="notice"><%= notice %></p>
-<h1>Order Details</h1>
-<table id="customers">
-  <tr>
-    <td>Order date:</td>
-    <td>Ordered By</td>
-    <td>Order date:</td>
-  </tr>
-  
-  <tr>
-    <td><%= @order.order_date %></td>
-    <td><%= @order.user %></td>
-    <td><%= @order.status %></td>
-    
-  </tr>
-  
-  <tr>
-    <td><%= link_to 'Edit', edit_order_path(@order), :class =>"button" %></td>
-    <td><%= link_to 'Back', orders_path, :class =>"button" %></td>
-        
-  </tr>
-  </table>
-
-<h2>Order Items</h2>
-
- <table id="customers">
-   <% @orderitems.each do |orderitem| %>
-      <tr>
-        <td><%= orderitem.created_at %></td>
-        
-        <td><%= orderitem.title %></td>
-       <td><%= orderitem.order_id %></td>
-       
-      </tr>
-    <% end %>
- 
-   <tr></tr>
-   </table>
-      
-   </div>
 
