--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -7,7 +7,9 @@
     
 
 <h1>Charity Fund Raising App for SJAIDSF&F</h1>
-<p>Welcome to your first home page! blah blah blha!</p>
+<p>This is the fundaraising website for St Joespehs
+See below some of our available categories and most Popular products
+</p>
 <br>
 
 <br>
