--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -10,6 +10,7 @@
 <p>This is the fundaraising website for St Joespehs
 See below some of our available categories and most Popular products
 </p>
+<p>Hello this is a super change in homepage</p>
 <br>
 
 <br>
