--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -14,7 +14,13 @@ See below some of our available categories and most Popular products
 
 <br>
 
+<h2>Categories for donation</h2>
+
 <%=render 'layouts/categories'%>
+
+<br>
+<h2>Popular products</h2>
+
 <%=render 'layouts/popular'%>
 
 <p>
