added data and trivial changes

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -19,7 +19,7 @@
        <p>
         
          <%= link_to 'Show',  item, :class => "button", :role => "button" %>
-         <a href="/cart/<%= item.id %>" class="button">Add To Cartttt...!</a>
+         <a href="/cart/<%= item.id %>" class="button">Add To Cart...!</a>
 
 <br>
         
