--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -10,6 +10,7 @@
      
       <% @items.each do |item| %>
       <div class="itemhols">
+       <div class="jumbotron">
        <h1><%= item.title %></h1>
        
        <%= link_to (image_tag item.image_url, :class => "itemholsIm"), item %>
@@ -28,14 +29,14 @@
 <br>
         
 <% if session[:login] == 1 %>    
-       
+
 <%= link_to 'Edit', edit_item_path(item), :class =>"button", :role=>"button" %>
 <%= link_to 'Destroy', item, method: :delete, data: { confirm: 'Are you sure?' }, :class =>"button", :role=>"button" %>
 <% end %>
 
 
        </p>
-        
+        </div>
       </div>
     <% end %>
     <div id="buttonNewItem">
