--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -15,7 +15,8 @@ See below some of our available categories and most Popular products
 <br>
 
 <h2>Categories for donation</h2>
-
+<i class="fas fa-train"></i>
+Train!
 <%=render 'layouts/categories'%>
 
 <br>
