--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -6,14 +6,13 @@
 <p>The Family and Friends Association for the St. Joseph’s Residents and Service Users 
   (aka St Joseph’s Association for the Intellectually Disabled Friends & Family)  
   which is a voluntary organisation formed in 1976 and is registered with 
-  the Irish Charities Regulator Ref. CHY10564 . 
-  <br>
-Its main objective is to improve, by all legitimate means, the care and treatment 
-of persons with an intellectual disability availing of St. Joseph’s service. 
- </p>
-</div>
+  the Irish Charities Regulator Ref. CHY10564 . Its main objective is to improve, 
+  by all legitimate means, the care and treatment of persons with an intellectual disability 
+  availing of St. Joseph’s service. 
+</p>
+
 <h2>Mission Statement</h2>
-<div>
+
 </p>
 The purpose of this online charity store is to raise in excess of €60,000 to fund 
 upgrades to gardens and exterior recreational areas at  St Joseph's Intellectual Disability Service 
