--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -3,40 +3,20 @@
 <h1>Charity Website</h1>
 <h2>About Us</h2>
 <div>
-<p>The Family and Friends Association for the St. Joseph’s Residents and Service Users 
-  (aka St Joseph’s Association for the Intellectually Disabled Friends & Family)  
-  which is a voluntary organisation formed in 1976 and is registered with 
-  the Irish Charities Regulator Ref. CHY10564 . Its main objective is to improve, 
-  by all legitimate means, the care and treatment of persons with an intellectual disability 
-  availing of St. Joseph’s service. 
+<p>The Family and Friends Association for the St. Joseph’s Residents and Service Users (aka St Joseph’s Association for the Intellectually Disabled Friends & Family) which is a voluntary organisation formed in 1976 and is registered with the Irish Charities Regulator Ref. CHY10564 . Its main objective is to improve, by all legitimate means, the care and treatment of persons with an intellectual disability availing of St. Joseph’s service. 
 </p>
-
 <h2>Mission Statement</h2>
-
 </p>
-The purpose of this online charity store is to raise in excess of €60,000 to fund 
-upgrades to gardens and exterior recreational areas at  St Joseph's Intellectual Disability Service 
-(The Service) residences located at St Ita’s Health Service Executive (HSE) Residences 
-in Portrane and Clonmethan Lodge Residences in Oldtown Co Dublin. 
-<br>
-The Service receives funding from the HSE however this is not sufficient to meet the continuous demands of 
-staff, families and service users to introduce quality improvements. As a consequence of this The Service 
-is supported by local fundraising groups and family and friends to develop individual projects. 
+The purpose of this online charity store is to raise in excess of €60,000 to fund upgrades to gardens and exterior recreational areas at  St Joseph's Intellectual Disability Service (The Service) residences located at St Ita’s Health Service Executive (HSE) Residences in Portrane and Clonmethan Lodge Residences in Oldtown Co Dublin.
 </p>
 <p>
-All funds raised via this charity store app will go directly to a bank account, paypal account or Revolut 
-account under the direct control of the above charity’s trustees. Development of the website has been 
-overseen by Joyce Loughnan. Ms Loughnan is an experienced charity executive and secretary of St Joseph’s 
-Association for the Intellectually Disabled Friends & Family (SJAIDSF&F). 
+The Service receives funding from the HSE however this is not sufficient to meet the continuous demands of staff, families and service users to introduce quality improvements. As a consequence of this The Service is supported by local fundraising groups and family and friends to develop individual projects. 
 </p>
 <p>
-The planned work builds on earlier work done at St Ita’s HSE Campus, for example, the installation of 
-  pagodas, benches and seating areas in Grove Lodge by SJAIDSF&F. The aim of these upgrades, that have been 
-  recommended recommended by The Service’s clinical management and staff, is to improve the aesthetics 
-  of their surroundings; to help draw clients out of the home and into these recreational spaces on a 
-  regular basis; to help reduce anxiety levels and increase opportunities to socialise in an enjoyable and discreet way; 
-  to enhance their social, emotional and physical well-being; to add depth to their ongoing learning and development; 
-  and enrich their quality of life. 
+All funds raised via this charity store app will go directly to a bank account, Paypal account or Revolut account under the direct control of the above charity’s trustees. Development of the website has been overseen by Joyce Loughnan. Ms Loughnan is an experienced charity executive and secretary of St Joseph’s Association for the Intellectually Disabled Friends & Family (SJAIDSF&F). 
+</p>
+<p>
+The planned work builds on earlier work done at St Ita’s HSE Campus, for example, the installation of pagodas, benches and seating areas in Grove Lodge by SJAIDSF&F. The aim of these upgrades, that have been recommended recommended by The Service’s clinical management and staff, is to improve the aesthetics of their surroundings; to help draw clients out of the home and into these recreational spaces on a regular basis; to help reduce anxiety levels and increase opportunities to socialise in an enjoyable and discreet way; to enhance their social, emotional and physical well-being; to add depth to their ongoing learning and development; and enrich their quality of life. 
 </p>
 <p>
 The plans mitigates against the risks of: 
