--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -5,7 +5,7 @@
 <h2>About Us</h2>
 <p>The Family and Friends Association for the St. Joseph’s Residents and Service Users (aka St Joseph’s Association for the Intellectually Disabled Friends & Family) which is a voluntary organisation formed in 1976 and is registered with the Irish Charities Regulator Ref. CHY10564 . Its main objective is to improve, by all legitimate means, the care and treatment of persons with an intellectual disability availing of St. Joseph’s service. 
 </p>
-<h2>Mission Statement</h2>
+<strong>Mission Statement</strong>
 </p>
 The purpose of this online charity store is to raise in excess of €60,000 to fund upgrades to gardens and exterior recreational areas at  St Joseph's Intellectual Disability Service (The Service) residences located at St Ita’s Health Service Executive (HSE) Residences in Portrane and Clonmethan Lodge Residences in Oldtown Co Dublin.
 </p>
