--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,13 +1,13 @@
 <% provide(:title, "About") %>
-
-<h1>Charity Website</h1>
+<head>
+<h1>Upgrading St Joseph's Gardens and Courtyards for the Residents</h1>
 <div>
 <h2>About Us</h2>
 <p>The Family and Friends Association for the St. Joseph’s Residents and Service Users (aka St Joseph’s Association for the Intellectually Disabled Friends & Family) which is a voluntary organisation formed in 1976 and is registered with the Irish Charities Regulator Ref. CHY10564 . Its main objective is to improve, by all legitimate means, the care and treatment of persons with an intellectual disability availing of St. Joseph’s service. 
 </p>
 <strong>Mission Statement</strong>
 </p>
-The purpose of this online charity store is to raise in excess of €60,000 to fund upgrades to gardens and exterior recreational areas at  St Joseph's Intellectual Disability Service (The Service) residences located at St Ita’s Health Service Executive (HSE) Residences in Portrane and Clonmethan Lodge Residences in Oldtown Co Dublin.
+The purpose of this online garden centre store is to fundraise for upgrades to gardens and exterior recreational areas at  St Joseph's Intellectual Disability Service (The Service) residences located at St Ita’s Health Service Executive (HSE) Residences in Portrane and Clonmethan Lodge Residences in Oldtown Co Dublin.
 </p>
 <p>
 The Service receives funding from the HSE however this is not sufficient to meet the continuous demands of staff, families and service users to introduce quality improvements. As a consequence of this The Service is supported by local fundraising groups and family and friends to develop individual projects. 
