--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,8 +1,11 @@
 <% provide(:title, "About") %>
 <head>
-<h1>Upgrading St Joseph's Gardens and Courtyards for the Residents</h1>
-<div>
-<h2>About Us</h2>
+<h1>Upgrading St Joseph's Gardens and Courtyards</h1>
+</head>
+
+<p>
+<strong>About Us</strong>
+</p>
 <p>The Family and Friends Association for the St. Joseph’s Residents and Service Users (aka St Joseph’s Association for the Intellectually Disabled Friends & Family) which is a voluntary organisation formed in 1976 and is registered with the Irish Charities Regulator Ref. CHY10564 . Its main objective is to improve, by all legitimate means, the care and treatment of persons with an intellectual disability availing of St. Joseph’s service. 
 </p>
 <strong>Mission Statement</strong>
@@ -24,4 +27,4 @@ The plans mitigates against the risks of:
 (b) sunburn by the installation of awnings, pagodas and pergolas as photosensitivity is an unfortunate side effect of many patients’ medication and; 
 (c) breaches of privacy by the installation of wall-top fencing.
 </p>
-</div>
+
