--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -2,7 +2,7 @@
 <head>
 <h1>Upgrading St Joseph's Gardens and Courtyards</h1>
 </head>
-
+<div>
 <p>
 <strong>About Us</strong>
 </p>
@@ -27,4 +27,5 @@ The plans mitigates against the risks of:
 (b) sunburn by the installation of awnings, pagodas and pergolas as photosensitivity is an unfortunate side effect of many patients’ medication and; 
 (c) breaches of privacy by the installation of wall-top fencing.
 </p>
+</div>
 
