--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -6,7 +6,7 @@
     
     
 
-<h1>Charity Fund Raising App for SJAIDSF&F</h1>
+<h1>Upgrading the Gardens at St Joseph's</h1>
 <p>This is the fundaraising website for St Joseph's
 See below some of our available categories and most Popular products
 </p>
