--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -7,8 +7,7 @@
     
 
 <h4>Upgrading the Gardens at St Joseph's</h4>
-<p>This is the fundaraising website for St Joseph's
-See below some of our available categories and most Popular products
+<p>We want the residents to enjoy their time outdoors and so please help us by purchasing the garden furniture and landscapeing work from the selection below to make their surroundings more enjoyable.
 </p>
 <br>
 
