--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -7,18 +7,18 @@
     
 
 <h4>Upgrading the Gardens at St Joseph's</h4>
-<p>We want the residents to enjoy their time outdoors and so please help us by purchasing the garden furniture and landscapeing work from the selection below to make their surroundings more enjoyable.
+<p>We want the residents to enjoy their time outdoors and so please help us by first picking the reccreational area you would like to help improve and then by making an online purchase of an item of garden furniture or a landscaping work from the selection below to make their surroundings more enjoyable.
 </p>
 <br>
 
 <br>
 
-<h2>Categories for donation</h2>
+<h2>Select which recreational area you would like to improve</h2>
 
 <%=render 'layouts/categories'%>
 
 <br>
-<h2>Popular products</h2>
+<h2>See below the list of furniture and works available for purchase for each area</h2>
 
 <%=render 'layouts/popular'%>
 
