--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -13,12 +13,13 @@
 
 <br>
 
-<h2>Select which recreational area you would like to improve</h2>
+<h4>Pick a garden or courtyard</h4>
+<p>Select which recreational area you would like to improve</p>
 
 <%=render 'layouts/categories'%>
 
-<br>
-<h2>See below the list of furniture and works available for purchase for each area</h2>
+<h4>Pick an item of furniture or a job to be done</h4>
+<p>See below the list of furniture and works available for purchase for each area</p>
 
 <%=render 'layouts/popular'%>
 
