menu elements authorisation

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,50 +18,49 @@
         <li><%= link_to "About", about_path %></li>
         <li><%= link_to "Contact", help_path %></li>
         <li><%= link_to "Products", products_path %></li>
-        <!--- <li><%= link_to "Log In",   login_path %></li> --->
-        <!--- <li><%= link_to "Log Out",   logout_path %></li> --->
-          <% if user_signed_in? %>
-            <li><%= link_to "View Cart", "/cart" %></li>
-          <% end %>
 
         <% if user_signed_in? %>
-                 <li><a href="#">Hi <%= current_user.email %></a></li>
+                 <li><%= link_to "View Cart", "/cart" %></li>
                  <li><%= link_to 'Sign out', destroy_user_session_path, :method => :delete %></li>
                  <li><%= link_to 'Edit Profile', edit_user_registration_path %></li>
         <% else %>
+           <% if session[:login] == 1 %>
+                <li><%= link_to "View Orders", orders_path  %></li>
+            <% else %>
                  <li><%= link_to 'Register', new_user_registration_path %></li> 
                  <li><%= link_to 'Sign in', new_user_session_path %></li>
+            <% end %>
         <% end %>
           
+          <% if user_signed_in? %>
+         <!-- If you are signed in as a user you can not use the admin login button, this prevents a user being signed is as a user and as admin simultaneously -->
+          <% else %>
         <% if session[:login] == 1 %> 
         <li><%= link_to "Admin Logout", logout_path %></li>
         <% else %>
         <li><%= link_to "Admin Login", login_path %></li>
         <% end %>
-        
-        <!---
-        <% if user_signed_in? %>
-                  
-                 
-                 <li><%= link_to 'Sign out', destroy_user_session_path, :method => :delete %></li>
-          <% else %>
-                 <li><%= link_to 'Register', new_user_registration_path %></li> 
-                 <li><%= link_to 'Sign in', new_user_session_path %></li>
-                 <li><%= link_to "View Orders", orders_path  %></li>
-          <% end %>
-        --->
+        <% end %>
         
         
       </ul>
 </header>
-    
-    <p>
-
+    <p>  
+        <% if user_signed_in? %>
+            Hi, you are logged in as <%= current_user.email %>
+            <%= link_to ' edit your profile', edit_user_registration_path %>
+        <% elsif session[:login] == 1 %> 
+            You are currently logged in as Admin
+        <% else %>
+          &nbsp;<!-- ned whit space here or everything below will jump when not logged in s a user or as admin -->
+        <% end %> 
+    </p>
+        
     <%= form_tag("/search", :method => "post") do %>
     <%= label_tag(:q, "Search for:") %>
     <%= text_field_tag(:q) %>
     <%= submit_tag("Search") %>
-    <% end %>
+     <% end %>
       
     </p>
 
