--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,4 +1,51 @@
 <% provide(:title, "Help") %>
 
-<h1>Charity Help</h1>
-<p>Some further information here</p>
+<h4>Contact Us</h4>
+<br>
+<br>
+<p>
+<strong>Association Address</strong>
+<br>
+<br>
+Joyce Loughnan, Secretary
+<br>
+St Joseph's Intellectual Disability Service Association Family & Friends
+<br>
+Mobile: 086 839 1435
+<br>
+Email: joyceloughnan@gmail.com
+<br>
+<strong>Residence Management</strong>
+<br>
+<br>  
+St Josephs Intellectual Disability Services Residential Services
+<br>
+Clonmethan Lodge, Day Residential Complex, Oldtown, Co Dublin 
+<br>
+Tel  01 843 3195
+<br>
+<br>
+<strong>Technical Support</strong>
+<br>
+<br>
+Shane Gibney, Lead Website Developer
+<br>
+Mobile: 086 844 4766
+<br>
+Email: x19156073@student.ncirl.ie
+<br>
+Kieran Culleton, Website Design
+<br>
+Mobile: 087 906 5591
+<br>
+Email: x19182091@student.ncirl.ie
+<br>
+Donald Hickey, Project Management
+<br>
+Mobile: 087 906 5591
+<br>
+Email: x19180195@student.ncirl.ie
+<br>
+
+</p>
+  
