--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   <body>
 
  <header class="headSec">
-    <h1>St. Joseph’s Assoc. IDS F&F</h1>
+    <h1>St. Joseph’s Gardens</h1>
       <ul class="tabs">
         <li><%= link_to "Home",  "/" %></li>
         <li><%= link_to "About", about_path %></li>
