--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
         <li><%= link_to "Home",  "/" %></li>
         <li><%= link_to "About", about_path %></li>
         <li><%= link_to "Contact", help_path %></li>
-        <li><%= link_to "Products", products_path %></li>
+        <li><%= link_to "Donate Items", products_path %></li>
 
         <% if user_signed_in? %>
                  <li><%= link_to "View Cart", "/cart" %></li>
