--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -7,7 +7,7 @@
     
 
 <h4>Upgrading the Gardens at St Joseph's</h4>
-<p>We want the residents to enjoy their time outdoors and so please help us by first picking the reccreational area you would like to help improve and then by making an online purchase of an item of garden furniture or a landscaping work from the selection below to make their surroundings more enjoyable.
+<p>We want the residents to enjoy their time outdoors and so please help us by donating garden items or landscaping works to be done. Please begin by first picking the reccreational area you would like to help improve and then by making an online purchase of an item of garden furniture or a landscaping work from the selection below to make their surroundings more enjoyable.
 </p>
 <br>
 
