--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -13,7 +13,7 @@
 
 <br>
 
-<h4>Pick a garden or courtyard</h4>
+<h4>Pick a garden or courtyard for your donated item</h4>
 <p>Select which recreational area you would like to improve</p>
 
 <%=render 'layouts/categories'%>
