--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,11 @@
  *= require_self
  */
 
+.catalog {
+    margin-left:auto; 
+    margin-right:auto;
+}
+
 .headSec {
     min-height:10px;
     background-color: #5085A5;
