--- a/app/views/cart/createOrder.html.erb
+++ b/app/views/cart/createOrder.html.erb
@@ -51,6 +51,6 @@ You have just placed an order <%=@order.id%></h1>
 <input type="hidden" name="currency_code" value="EUR">
 <input type="hidden" name="amount" value="<%= @overall %>">
 <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynow_LG.gif" name="submit" alt="Make payments with PayPal - it's fast, free and secure!">
-<input type="hidden" name="return" value="https://3bf53c68a1c243608bc2a558c5090d8c.vfs.cloud9.us-east-1.amazonaws.com/" >
+<input type="hidden" name="return" value="https://shrouded-mesa-73670.herokuapp.com/" >
 </form>
 
